# OpenManipulatorX_ROS2

./: .gitignore  README.md
DynamixelSDK/dynamixel_sdk_custom_interfaces/: CMakeLists.txt
DynamixelSDK/dynamixel_sdk_custom_interfaces/msg/: SetCurrent.msg
DynamixelSDK/dynamixel_sdk_custom_interfaces/srv/: GetCurrent.srv
DynamixelSDK/dynamixel_sdk_examples/: CMakeLists.txt
DynamixelSDK/dynamixel_sdk_examples/include/: current_read_write_node.hpp
DynamixelSDK/dynamixel_sdk_examples/src/: current_read_write_node.cpp  read_write_node.cpp
interfaces/: CMakeLists.txt  package.xml
interfaces/srv/: IK500.srv
matlab_files/: Jacobian (1).m  forward_kinematics.m
open_manipulator/: open_manipulator_x.repos
open_manipulator/open_manipulator_x_controller/src/: open_manipulator_x_controller.cpp
open_manipulator/open_manipulator_x_description/rviz/: open_manipulator_x.rviz
open_manipulator_msgs/: CMakeLists.txt
open_manipulator_msgs/srv/: GetJointVelocity.srv  GetLinearVelocity.srv  JointToLinear.srv  LinearToJoint.srv
rbe500-example/: CMakeLists.txt  package.xml
rbe500-example/src/: .basic_robot_control.cpp.swp  basic_robot_control.cpp
rbe500_example_py/: package.xml  setup.cfg  setup.py
rbe500_example_py/rbe500_example_py/: basic_robot_control.py  discrete_velocity_control.py  forward_kinematics.py  inverse_kinematics.py  pd_controller.py  pd_sam.py  test_gripper.py  velocity_kinematics.py  visualization.py
